deployment/acceptance/statistics-dashboard-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: statistics-dashboard-ui-service-acceptance
  name: statistics-dashboard-ui-service-acceptance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: statistics-dashboard-ui-acceptance
  type: ClusterIP
